# audiobook

./: .gitignore  README.md  pyproject.toml
docs/: apple-silicon.md  colab.md
notebooks/: test_tts_colab.ipynb
src/epub_audiobook/: __init__.py  cli.py  config.py
src/epub_audiobook/audio/: processor.py
src/epub_audiobook/epub/: extractor.py  parser.py
src/epub_audiobook/pipeline/: __init__.py  manifest.py  orchestrator.py
src/epub_audiobook/tts/: chunker.py  qwen_client.py
tests/: test_chunker.py  test_epub_parser.py  test_manifest_resume.py
