[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epub-audiobook"
version = "0.1.0"
description = "Convert EPUB books to audiobooks using Qwen3-TTS VoiceDesign"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
colab = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
]
apple-silicon = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
epub-audiobook = "epub_audiobook.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/epub_audiobook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
